// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination next 1`] = `
<div
  className="next css-88mn7o-Container eutkdkv0"
>
  <a
    className="css-83egvd-StyledAnchor eutkdkv1"
    href="#"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="css-fzu6l2-Card eutkdkv2"
    >
      <div
        className="css-17qbf5t-ArrowDiv eutkdkv3"
      >
        NEXT
        <img
          alt="Next"
          className="css-a41acm-ArrowIcon eutkdkv4"
          src="test-image-stub"
        />
      </div>
      <span>
        Step 2: Add a funding source
      </span>
    </div>
  </a>
</div>
`;

exports[`Pagination previous 1`] = `
<div
  className="previous css-88mn7o-Container eutkdkv0"
>
  <a
    className="css-83egvd-StyledAnchor eutkdkv1"
    href="#"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="css-fzu6l2-Card eutkdkv2"
    >
      <div
        className="css-17qbf5t-ArrowDiv eutkdkv3"
      >
        <img
          alt="Previous"
          className="css-a41acm-ArrowIcon eutkdkv4"
          src="test-image-stub"
        />
        PREVIOUS
      </div>
      <span>
        Step 1: Creating Business Verified Customers
      </span>
    </div>
  </a>
</div>
`;
